--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ expo-env.d.ts
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+*.log
 
 # macOS
 .DS_Store
@@ -35,6 +36,16 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# testing
+coverage/
+*.lcov
+
+# IDE
+.idea/
+*.swp
+*.swo
+*~
 
 app-example
 
